<resources>
    <string name="app_name" translatable="false">Kivi Remote Server</string>
    <string name="input_none" translatable="false">UNKNOWN</string>
    <string name="input_vga" translatable="false">VGA</string>
    <string name="input_svideo" translatable="false">S VIDEO</string>
    <string name="input_scart" translatable="false">SCART</string>
    <string name="input_cvbs" translatable="false">CVBS</string>
    <string name="input_dtv" translatable="false">DTV</string>
    <string name="input_storage" translatable="false">STORAGE</string>
    <string name="input_ktv" translatable="false">KTV</string>
    <string name="input_jpeg" translatable="false">JPEG</string>
    <string name="input_num" translatable="false">NUM</string>
    <string name="input_scaler_op" translatable="false">SCALER OP</string>
    <string name="input_ruv" translatable="false">RUV</string>
    <string name="ok" translatable="false">ОК</string>
    <string name="network_failure_message">Network unavailable</string>
    <string name="start_server" translatable="false">start server</string>
    <string name="terminate_server" translatable="false">terminate</string>
    <string name="settings_open" translatable="false">settings</string>
    <string name="set_kivi_ime" translatable="false">Set IME NOW!</string>
    <string name="mess_server_at" formatted="false" translatable="false">Server at IP: %s, port: %s</string>
    <string name="server_terminate_message" translatable="false">"Servet terminated"</string>
    <string name="word_separators" translatable="false">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="label_go_key" translatable="false">Go</string>
    <string name="label_next_key" translatable="false">Next</string>
    <string name="label_send_key" translatable="false">Send</string>
    <string name="ip" translatable="false">Device IP:</string>
    <string name="running_on" translatable="false">Running on AndroidTV:</string>
    <string name="wifi" translatable="false">Wi-Fi</string>
    <string name="video_sound">Video/Sound</string>
    <string name="info">INFO</string>
    <string name="vga" translatable="false">VGA</string>
    <string name="atv">ATV</string>
    <string name="hdmi" translatable="false">HDMI 1</string>
    <string name="hdmi2" translatable="false">HDMI 2</string>
    <string name="hdmi3" translatable="false">HDMI 3</string>
    <string name="hdmi4" translatable="false">HDMI 4</string>
    <string name="dtv">DTV</string>
    <string name="dvi" translatable="false">DVI</string>
    <string name="av" translatable="false">AV</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="to_hide">Hidden apps</string>
    <string name="to_visible">Visible apps</string>
    <string name="delete">Delete</string>
    <string name="message_choose_app">Please select app</string>
    <string name="result">Result</string>
    <string name="recommended">Recommended</string>
    <string name="settings">Settings</string>
    <string name="base_settings">Base</string>
    <string name="inputs">Inputs</string>
    <string name="my_apps">My apps</string>
    <string name="kivi_apps">Recommended by KIVI</string>
    <string name="empty_text" translatable="false" />
    <string name="background">Background</string>
    <string name="apps_list">Applications</string>
    <string name="clock">Clock</string>
    <string name="gallery_title">Gallery</string>
    <string name="search">"Search on the Internet "</string>
    <string name="file">File</string>
    <string name="storage">Storage</string>
    <string name="picture">Picture</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="app">App</string>
    <string name="settings_android">Android</string>
    <string name="old_preference">Legacy</string>
    <string name="to_usb" translatable="false">USB</string>
    <string name="ypbpr">YPBPR</string>
    <string name="accessibility_service_description">accessibility_service_description</string>
    <string name="small">Small</string>
    <string name="standard">Standard</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra Large</string>
    <string name="icon_size_str">Icon size</string>
    <string name="line_settings">Section</string>
    <string name="widget">Widget</string>
    <string name="hidden">Hidden</string>
    <string name="add_widget">Add widget</string>
    <string name="lines_description">Please select a section and move it to the desired position</string>
    <string name="ratio">Ratio</string>
    <string name="channel">Channel</string>
    <string name="optimization">Start optimization</string>
    <string name="sleep">Sleep</string>
    <string name="mode">Mode</string>
    <string name="normal">Normal</string>
    <string name="soft">Soft</string>
    <string name="economy">Economy</string>
    <string name="vivid">Vivid</string>
    <string name="auto">Auto</string>
    <string name="user">User</string>
    <string name="r_full">Full</string>
    <string name="r_16x9" translatable="false">16x9</string>
    <string name="default_r">Default</string>
    <string name="r_4x3" translatable="false">4x3</string>
    <string name="r_native" translatable="false">Native</string>
    <string name="picture_des">Picture settings *Video content required</string>
    <string name="sleep_desc">Turn off in %s</string>
    <string name="temperature_des">Temperature</string>
    <string name="color_g">Green</string>
    <string name="color_b">Blue</string>
    <string name="color_r">Red</string>
    <string name="sharpness">Sharpness</string>
    <string name="saturation">Saturation</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="backlight">Backlight</string>
    <string name="mode_desc">Mode *Video content required</string>
    <string name="ratio_desc">Ratio *Video content required</string>
    <string name="timer_off">Timer off</string>
    <string name="double_dot" translatable="false">:</string>
    <string name="off">Off</string>
    <string name="minutes">" min"</string>
    <string name="hours">" h "</string>
    <string name="cool">Cold</string>
    <string name="nature">Nature</string>
    <string name="warm">Warm</string>
    <string name="high">High</string>
    <string name="middle">Middle</string>
    <string name="low">Low</string>
    <string name="hdr" translatable="false">HDR</string>
    <string name="notifications" translatable="false">notifications</string>
    <string name="warmer">Warmer</string>
    <string name="cooler">Cooler</string>
    <string name="movie">Movie</string>
    <string name="sport">Sport</string>
    <string name="game">Game</string>
    <string name="lt_settings" translatable="false" >Settings</string>
    <string name="lt_hdmi_settings" translatable="false" >HDMI Settings</string>
    <string name="lt_home" translatable="false" >Home</string>
    <string name="lt_back" translatable="false" >Back</string>
    <string name="lt_q_settings" translatable="false">Quick Settings</string>
    <string name="lt_channels_list" translatable="false">Channel list</string>
    <string name="lt_film_catalogue" translatable="false">Film catalogue</string>
    <string name="lt_widgets" translatable="false">Widgets</string>
    <string name="support">Support 24/7</string>
    <string name="help_header">Online customer support 24/7
</string>
    <string name="help">
If you need assistance in setting up your TV,
please contact us by the hotline number
or through the website </string>
    <string name="phone_desk">*Безкоштовно з усіх мобільних та стаціонарних номерів України</string>
    <string name="online_support">Remote Connect</string>
    <string name="back">Back</string>
    <string name="system">System</string>
    <string name="dvbs" translatable="false">DVB-S2</string>
    <string name="store">Store mode</string>
    <string name="dvbc" translatable="false">DVB-C</string>
    <string name="recommended_apps">Advise</string>
    <string name="other">Other</string>
    <string name="voice">voice</string>
    <string name="keyboard">keyboard</string>
    <string name="version">Version</string>
    <string name="send_log">Send log</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="please_wait">Please wait</string>
    <string name="number_log">Report number</string>
    <string name="error">Error</string>
    <string name="picture_mode">Picture mode</string>
    <string name="overlay_was_denied">App can\'t work without permissions</string>
    <string name="sound">Sound</string>
    <string name="sound_standard">Standard</string>
    <string name="sound_film">Film</string>
    <string name="sound_music">Music</string>
    <string name="sound_user">User</string>
    <string name="sound_type">Sound mode</string>
    <string name="sound_low">Bass</string>
    <string name="sound_height">Treble</string>
    <string name="sound_balance">Balance</string>
    <string name="sound_dolby">Dolby</string>
    <string name="zoom1">zoom1</string>
    <string name="zoom2">zoom2</string>
    <string name="panorama">panorama</string>
    <string name="t0">Off</string>
    <string name="t1">15 min</string>
    <string name="t2">30 min</string>
    <string name="t3">1 h</string>
    <string name="t4">2 h</string>
    <string name="t5">3 h</string>
    <string name="keyboard_desk">Цифровой ввод</string>
    <string name="settings_desk">Настройки системы</string>
    <string name="empty_str" translatable="false"></string>
    <string name="sound_balance_title_left">Л</string>
    <string name="sound_balance_title_right">П</string>
    <string name="temperature_mode_normal">Нормальная</string>
    <string name="temperature_mode_warm">Теплая</string>
    <string name="temperature_mode_very_warm">Очень теплая</string>
    <string name="temperature_mode_cold">Холодная</string>
    <string name="temperature_mode_very_cold">Очень холодная</string>
    <string name="sound_balance_right_value">П %d%%</string>
    <string name="sound_balance_left_value">Л %d%%</string>
    <string name="inputs_type_atv">Аналоговый</string>
    <string name="inputs_type_av">AV-выход</string>
    <string name="inputs_type_tv">Т2</string>
    <string name="inputs_type_dvb_s2">Спутник</string>
    <string name="inputs_type_dvb_c">Кабельное</string>
</resources>