<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_server" />

            <Button
                android:id="@+id/btnTerminate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/terminate_server" />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_open" />

            <Button
                android:id="@+id/btnSetIME"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_kivi_ime" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="10"
                android:textSize="28sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small"
            android:textStyle="bold"
            tools:text="@string/ip" />

        <TextView
            android:id="@+id/tvTopInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small"
            android:textStyle="bold"
            tools:text="@string/running_on" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/small"
            android:layout_margin="@dimen/mid"
            android:background="@color/colorPrimary" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="50000"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                tools:text="@string/app_name" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
